Changed facilities div text align to left to fix a bug with word spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ hr {
 
 /*List text was starting in center and not beside bullet points*/
 .about-us-facilities li {
-    text-align: justify;
+    text-align: left;
 }
 
 .about-us-who {
